--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
 body {
-  color: red;
+  background: linear-gradient(to bottom, #536976, #BBD2C5);
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 85%;
+  margin: 2em auto;
 }
