adds default styles and main nav

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,91 @@
+/*-- Defaults --*/
+html, body, main, section, div, article, aside, figure, figcaption, image, iframe, h1, h2, h3, h4, h5, h6, p, table {
+  margin: 0;
+  padding: 0;
+}
+:root {
+  --dark: #111;
+  --gray: #272727;
+  --white: #e9e9e9;
+  --accent: #18C4F7;
+  --reg: all .3s ease-in-out;
+  font-size: 62.5%;
+}
 body {
-  background: linear-gradient(to bottom, #536976, #BBD2C5);
-  background-repeat: no-repeat;
-  height: 100vh;
-  width: 85%;
-  margin: 2em auto;
+  color: var(--white);
+  font-size: 1.8rem;
+  width: 98vw;
+  margin: auto;
+  background: var(--gray);
+  background-image: url("../img/bubbles.svg"); /*--n.b. the ../file/path--*/
+}
+.main-nav, h1, h2, h3, h4, h5, h6, .btn, .custom {
+  font-family: 'Luckiest Guy', cursive;
+}
+p {
+  margin-bottom: 1em;
+}
+/* -- Document --*/
+body {
+  background: var(--gray);
+  background-image: url("../img/bubbles.svg"); /*--n.b. the ../file/path--*/
+}
+.main-nav {
+  background: var(--dark);
+  padding: .25em 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.brand {
+  display: flex;
+  align-items: center;
+}
+.brand img {
+  height: 60px;
+}
+.brand h1 {
+  padding-top: 1.2rem;
+  padding-left: 1.2rem;
+}
+.nav-links {
+  padding-top: 1.2rem;
+}
+.nav-links a {
+  margin-left: 1.5rem;
+  transition: var(--reg);
+}
+.nav-links a:link {
+  color: var(--white);
+  text-decoration: none;
+}
+.nav-links a:visited {
+  color: var(--white);
+}
+.nav-links a:hover {
+  color: var(--accent);
+}
+.nav-links a:active, .nav-links a.active {
+  color: var(--accent);
+}
+main {
+  padding: 0 1em;
+}
+
+/*-- Media Queries --*/
+@media screen and (min-width: 550px) {
+  body {width: 98vw;}
+}
+@media screen and (min-width: 768px) {
+  body {width: 92vw;}
+}
+@media screen and (min-width: 990px) {
+  body {width: 88vw;}
+  .main-nav {flex-direction: row; justify-content: space-between;}
+}
+@media screen and (min-width: 1280px) {
+  body {width: 84vw;}
+}
+@media screen and (min-width: 1440px) {
+  body {width: 82vw;}
 }
