--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,38 @@
 /*-- Defaults --*/
-html, body, main, section, header, div, article, aside, figure, figcaption, image, iframe, h1, h2, h3, h4, h5, h6, p, table {
+html, body, main, section, header, div, article, aside, figure, figcaption, image, iframe, h1, h2, h3, h4, h5, h6, p, table, blockquote {
   margin: 0;
   padding: 0;
 }
 :root {
-  --dark: #111;
+  --dark: #171717;
   --gray: #272727;
   --white: #e9e9e9;
   --accent: #18C4F7;
+  --dk-acc: #00A0D0;
   --reg: all .3s ease-in-out;
+  --font: 'Fira Sans', sans-serif;
   font-size: 62.5%;
 }
 body {
   color: var(--white);
-  font-size: 1.8rem;
+  font-size: 2rem;
   width: 98vw;
   margin: auto;
-  background: var(--gray);
-  background-image: url("../img/bubbles.svg"); /*--n.b. the ../file/path--*/
+  line-height: 1.3;
+  font-weight: 500;
+  font-family: var(--font);
 }
-.main-nav, h1, h2, h3, h4, h5, h6, .btn, .custom {
+.main-nav, h1, h2, h3, h4, h5, h6, .btn, .custom, blockquote {
   font-family: 'Luckiest Guy', cursive;
+  letter-spacing: 1px;
 }
 p {
   margin-bottom: 1em;
 }
 /* -- Document --*/
 body {
-  background: var(--gray);
-  background-image: url("../img/bubbles.svg"); /*--n.b. the ../file/path--*/
+  background: var(--dark);
+  background-image: url("../img/bubbles.svg"); /*-- N.B. the ../ in the file/path --*/
 }
 .main-nav {
   background: var(--dark);
@@ -55,40 +59,144 @@ body {
   margin-left: 1.5rem;
   transition: var(--reg);
 }
-.nav-links a:link {
+a:link {
   color: var(--white);
   text-decoration: none;
 }
-.nav-links a:visited {
+a:visited {
   color: var(--white);
 }
-.nav-links a:hover {
+a:hover {
   color: var(--accent);
 }
-.nav-links a:active, .nav-links a.active {
+a:active, a.active {
   color: var(--accent);
+  text-decoration: underline;
 }
-main {
-  padding: 0 1em;
-}
-header img {
+main img {
   width: 100%;
   height: auto;
+}
+.quote {
+  background: var(--dark);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0 2rem 0;
+  margin: 3rem auto;
+  outline: 2px dashed var(--white);
+  outline-offset: -2rem;
+}
+blockquote:before {
+  content: '“';
+  font-family: serif;
+  font-weight: bolder;
+  font-size: 8rem;
+  position: relative;
+  left: -5vw;
+  top: 6vh;
+  color: var(--accent);
+}
+blockquote {
+  font-size: 3rem;
+  max-width: 67vw;
+}
+.cite {
+  font-family: var(--font);
+  margin-top: 0;
+  font-size: 1.6rem;
+  text-align: right;
+  display: inline-block;
+  width: 100%;
+}
+header {
+  margin: 3rem auto;
+}
+section {
+  display: grid;
+  grid-gap: 3.2rem;
+  margin: 3rem auto;
+}
+section.odd {
+  grid-template-columns: 1fr;
+}
+section.even {
+  grid-template-columns: 1fr;
+}
+.img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+h3 {
+  color: var(--accent);
+  align-self: flex-start;
+}
+.glass-outer {
+  order: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.glass-inner {
+  max-width: 100%;
+  padding: 4rem 2rem;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 4px 16px 0 rgba(167, 167, 167, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.btn {
+  cursor: pointer;
+  color: var(--gray);
+  background-color: var(--accent);
+  border: none;
+  border-radius: 10rem;
+  padding: 1.3rem 4rem .5rem 4rem;
+  transition: var(--reg);
+}
+.btn:hover {
+  background-color: var(--dk-acc);
+}
+/*-- Footer Styles --*/
+footer {
+  background: var(--dark);
+  padding: 2rem 2rem 1rem 2rem;
+  display: flex;
+  direction: row;
+  justify-content: space-between;
+  font-size: 1.4rem;
 }
 /*-- Media Queries --*/
 @media screen and (min-width: 550px) {
   body {width: 98vw;}
 }
 @media screen and (min-width: 768px) {
-  body {width: 92vw;}
+  body {width: 86vw;}
+  blockquote {width: 50vw;}
+  .glass-outer {order: inherit;}
 }
 @media screen and (min-width: 990px) {
-  body {width: 88vw;}
+  body {width: 84vw;}
   .main-nav {flex-direction: row; justify-content: space-between;}
+  section.odd {grid-template-columns: 1fr 1fr;}
+  section.even {grid-template-columns: 1fr 1fr;}
 }
 @media screen and (min-width: 1280px) {
-  body {width: 84vw;}
+  body {width: 80vw;}
+  blockquote {width: 33vw;}
+  section.odd {grid-template-columns: 8fr 4fr;}
+  section.even {grid-template-columns: 4fr 8fr;}
 }
 @media screen and (min-width: 1440px) {
-  body {width: 82vw;}
+  body {width: 78vw;}
+  section.odd {grid-template-columns: 8fr 4fr;}
+  section.even {grid-template-columns: 4fr 8fr;}
 }
