--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
   line-height: 1.3;
   font-weight: 500;
   font-family: var(--font);
+  padding: 2rem 0;
 }
 .main-nav, h1, h2, h3, h4, h5, h6, .btn, .custom, blockquote {
   font-family: 'Luckiest Guy', cursive;
