--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ html, body, main, section, header, div, article, aside, figure, figcaption, imag
   --font: 'Fira Sans', sans-serif;
   font-size: 62.5%;
 }
+::selection {
+  color: var(--dark);
+  background-color: var(--accent);
+}
 body {
   color: var(--white);
   font-size: 2rem;
@@ -37,7 +41,7 @@ body {
 }
 .main-nav {
   background: var(--dark);
-  padding: .25em 1em;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
