--- a/css/style.css
+++ b/css/style.css
@@ -148,15 +148,16 @@ h3 {
 .glass-inner {
   max-width: 100%;
   padding: 4rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*-- frosted glass effect
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 4px 16px 0 rgba(167, 167, 167, 0.37);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  border: 1px solid rgba(255, 255, 255, 0.18);--*/
 }
 .btn {
   cursor: pointer;
