--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,34 @@ html, body, main, section, header, div, article, aside, figure, figcaption, imag
   margin: 0;
   padding: 0;
 }
+/*-- primary variables --*/
 :root {
-  --dark: #171717;
-  --gray: #272727;
-  --white: #e9e9e9;
+  --background: #171717;
+  --button: #272727;
+  --text: #e9e9e9;
   --accent: #18C4F7;
   --dk-acc: #00A0D0;
   --reg: all .3s ease-in-out;
   --font: 'Fira Sans', sans-serif;
   font-size: 62.5%;
 }
+/*-- alternate variables
+:root {
+  --background: #e9e9e9;
+  --button: #d1d1d1;
+  --text: #171717;
+  --accent: #18C4F7;
+  --dk-acc: #00A0D0;
+  --reg: all .3s ease-in-out;
+  --font: 'Fira Sans', sans-serif;
+  font-size: 62.5%;
+}--*/
 ::selection {
-  color: var(--dark);
+  color: var(--background);
   background-color: var(--accent);
 }
 body {
-  color: var(--white);
+  color: var(--text);
   font-size: 2rem;
   width: 98vw;
   margin: auto;
@@ -36,11 +48,11 @@ p {
 }
 /* -- Document --*/
 body {
-  background: var(--dark);
+  background: var(--background);
   background-image: url("../img/bubbles.svg"); /*-- N.B. the ../ in the file/path --*/
 }
 .main-nav {
-  background: var(--dark);
+  background: var(--background);
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -65,11 +77,11 @@ body {
   transition: var(--reg);
 }
 a:link {
-  color: var(--white);
+  color: var(--text);
   text-decoration: none;
 }
 a:visited {
-  color: var(--white);
+  color: var(--text);
 }
 a:hover {
   color: var(--accent);
@@ -83,14 +95,14 @@ main img {
   height: auto;
 }
 .quote {
-  background: var(--dark);
+  background: var(--background);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0 0 2rem 0;
   margin: 3rem auto;
-  outline: 2px dashed var(--white);
+  outline: 2px dashed var(--text);
   outline-offset: -2rem;
 }
 blockquote:before {
@@ -161,7 +173,7 @@ h3 {
 }
 .btn {
   cursor: pointer;
-  color: var(--gray);
+  color: var(--button);
   background-color: var(--accent);
   border: none;
   border-radius: 10rem;
@@ -173,7 +185,7 @@ h3 {
 }
 /*-- Footer Styles --*/
 footer {
-  background: var(--dark);
+  background: var(--background);
   padding: 2rem 2rem 1rem 2rem;
   display: flex;
   direction: row;
