--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@ body {
   font-family: var(--font);
   padding: 2rem 0;
 }
+img {
+  border-radius: .5rem;
+}
 .main-nav, h1, h2, h3, h4, h5, h6, .btn, blockquote {
   font-family: 'Luckiest Guy', cursive;
   letter-spacing: 1px;
@@ -130,10 +133,22 @@ blockquote {
 header {
   margin: 3rem auto;
 }
+hr {
+  height: 2px;
+  background: var(--text);
+}
 section {
   display: grid;
   grid-gap: 3.2rem;
   margin: 3rem auto;
+  /* frosted glass effect */
+  /* padding: .4rem;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 4px 16px 0 rgba(167, 167, 167, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: .5rem;
+  border: 1px solid rgba(255, 255, 255, 0.18); */
 }
 section.odd {
   grid-template-columns: 1fr;
@@ -163,13 +178,6 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*-- frosted glass effect
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 4px 16px 0 rgba(167, 167, 167, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);--*/
 }
 .btn {
   cursor: pointer;
